feat: add retry logic (3 attempts) to deploy-environment pipeline
- Add retry(3) to Load Configuration stage (Vault connectivity)
- Add retry(3) to Deploy MongoDB stage (resource/network issues)
- Add retry(3) to all application deployments:
  - statistics-api
  - device-registration-api
  - frontend

Improves pipeline resilience against transient failures.

--- a/infra/secrets.local.yaml.example
+++ b/infra/secrets.local.yaml.example
@@ -10,35 +10,35 @@ vault:
 # MongoDB configuration per environment
 mongodb:
   develop:
-    password: "changeme"
+    password: "S3cr3tP4ss!"
     username: "app_user"
     database: "device_registration"
   stage:
-    password: "changeme"
+    password: "S3cr3tP4ss!"
     username: "app_user"
     database: "device_registration"
   production:
-    password: "changeme"
+    password: "S3cr3tP4ss!"
     username: "app_user"
     database: "device_registration"
 
 # Jenkins configuration
 jenkins:
-  lock_log: false
-  admin_password: "changeme"
-  git_repository: "https://github.com/your-org/jenkins-library.git"
-  git_library_branch: "main"
+  lock_log: false  # Set to true in production to hide sensitive logs
+  admin_password: admin123
+  git_repository: "https://github.com/myworkshops/devsecops-demo.git"
+  git_library_branch: "feature/infrastructure"
   git_credentials_id: "wmoinar"
-  dockerhub_username: "your-dockerhub-username"
-  dockerhub_password: "your-dockerhub-token"
+  github_token: "github_pat_XXXXX"  # Optional, for private repos
+  dockerhub_username: "wmoinar"
+  dockerhub_password: "dckr_pat_XXXXX"
   sonarcloud_token: "your-sonarcloud-token"
-  github_token: "github_pat_YOUR_TOKEN_HERE"
 
 # Keycloak configuration
 keycloak:
-  admin_password: "changeme"
-  postgresql_password: "changeme"
-  lock_log: true
+  admin_password: admin123
+  postgresql_password: postgres123
+  lock_log: true  # Set to true in production to hide sensitive logs
   # Single public client for frontend (used across all environments)
   clients:
     - client_id: "statistics-frontend"
@@ -47,7 +47,7 @@ keycloak:
       public_client: true  # No client_secret required
       protocol: "openid-connect"
       standard_flow_enabled: true  # Authorization Code Flow
-      direct_access_grants_enabled: true  # Required for token exchange
+      direct_access_grants_enabled: false
       implicit_flow_enabled: false
       service_accounts_enabled: false
       # Web origins per environment (CORS)
@@ -108,7 +108,7 @@ keycloak:
           description: "Operator role with read-only access"
       users:
         - username: admin-dev
-          password: "changeme"
+          password: "dev-secret123"
           email: admin-dev@example.com
           firstName: Admin
           lastName: Dev
@@ -116,7 +116,7 @@ keycloak:
           emailVerified: true
           roles: [admin]
         - username: operator-dev
-          password: "changeme"
+          password: "dev-secret123"
           email: operator-dev@example.com
           firstName: Operator
           lastName: Dev
@@ -132,7 +132,7 @@ keycloak:
           description: "Operator role with read-only access"
       users:
         - username: admin-staging
-          password: "changeme"
+          password: "dev-secret123"
           email: admin-staging@example.com
           firstName: Admin
           lastName: Staging
@@ -148,7 +148,7 @@ keycloak:
           description: "Operator role with read-only access"
       users:
         - username: admin-prod
-          password: "changeme"
+          password: "dev-secret123"
           email: admin-prod@example.com
           firstName: Admin
           lastName: Prod
